# Ray-Tracing-CUDA

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
raytracing/: bmp.cpp  bmp.h  box2.txt  camera.h  color.h  cutils.h  defs.h  light.cpp  light.h  main.cpp  main.cu  primitive.cpp  primitive.h  ray.h  raytracer.cpp  raytracer.h  render.h  scene.h  scene.txt  scene2.txt  solver.h  test  tracing.h  vector3.cpp  vector3.h
